Promote GUI magic literals to named constants
Stage 2 of the GUI cleanup plan — extract the hardcoded character list
and the BannerInfoGUI slot tables to named constants near the data they
describe.

AlphabetBanner gains SUPPORTED_CHARACTERS — an ordered List<String> of
the 39 characters the banner-style font supports (A–Z, 0–9, ?!.). The
UNBORDERED / BORDERED HashMaps in this class are the actual source of
truth for which characters render, but a HashMap has no defined order,
so this List captures the display order for GUI consumers. The two maps
still hold the rendering definitions; this constant just names "what
exists, in what order to show it".

ChooseAlphabetGUI used to inline
"ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789?!." as a char[] and stringify each
index. Switched to AlphabetBanner.SUPPORTED_CHARACTERS so the GUI no
longer maintains a parallel copy.

BannerInfoGUI: the four slot-position lists were Arrays.asList() locals
recomputed on every refresh and partially duplicated — slotsToClear was a
hand-rolled union of borderPositions, craftPositions, and the workbench
slot (with 42 even appearing twice). Hoisted them to class-level
constants:

  MATERIAL_POSITIONS  - 4x4 material preview grid
  BORDER_POSITIONS    - 5x4 recipe panel brown-glass border
  CRAFT_POSITIONS     - 3x3 ingredients + result slot 42
  WORKBENCH_SLOT      - workbench/loom icon at slot 6

slotsToClear is now expressed as a Stream.concat of the three (no
hand-maintained duplicate), the workbench addItem uses WORKBENCH_SLOT,
and the recipe-grid loop bounds against CRAFT_POSITIONS.size() instead
of a hardcoded 10.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>